bozza sito statico

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,13 +12,11 @@
         <a href="projects.html">PROJECTS</a>
         <a href="contact.html">CONTACT</a>
     </header>
-    <div id="home">
-        <h1>Welcome to my portfolio</h1>
-        <div id="image-sequence">
-            <img src="img1.jpg" alt="Image 1">
-            <img src="img2.jpg" alt="Image 2">
-            <img src="img3.jpg" alt="Image 3">
-        </div>
+    <div id="contact">
+        <p>Get in touch:</p>
+        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="mailto:your.email@example.com">Email</a>
     </div>
 </body>
 </html>
