--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
-        <a href="index.html">HOME</a>
-        <a href="projects.html">PROJECTS</a>
-        <a href="contact.html">CONTACT</a>
+        <a href="index.html" id="index-button" class="custom-link">HOME</a>
+        <a href="projects.html" id="projects-button" class="custom-link">PROJECTS</a>
+        <a href="contact.html" id="contact-button" class="custom-link">CONTACT</a>
     </header>
-    <div id="home">
+    <!--div id="home">
         <h1>Welcome to my portfolio</h1>
         <div id="image-sequence">
             <img src="img1.jpg" alt="Image 1">
             <img src="img2.jpg" alt="Image 2">
             <img src="img3.jpg" alt="Image 3">
         </div>
-    </div>
+    </div-->
 </body>
 </html>
