--- a/projects.html
+++ b/projects.html
@@ -5,20 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
-        <a href="index.html">HOME</a>
-        <a href="projects.html">PROJECTS</a>
-        <a href="contact.html">CONTACT</a>
+        <a href="index.html" id="index-button" class="custom-link">HOME</a>
+        <a href="projects.html" id="projects-button" class="custom-link">PROJECTS</a>
+        <a href="contact.html" id="contact-button" class="custom-link">CONTACT</a>
     </header>
     <div id="projects">
         <div class="project">
             <div class="project-brand">Brand 1</div>
             <div class="project-description">A brief description of the project goes here.</div>
             <div class="project-images">
-                <img src="project1_img1.jpg" alt="Project 1 Image 1">
-                <img src="project1_img2.jpg" alt="Project 1 Image 2">
+                <img src="img/diavoletto.jpeg" alt="Project 1 Image 1">
+                <img src="img/kekko.jpeg" alt="Project 1 Image 2">
             </div>
         </div>
     </div>
