nuovo oggetto 3d + divisione in componenti

--- a/projects.html
+++ b/projects.html
@@ -5,22 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="js/script.js"></script>
 </head>
 <body>
-    <header>
-        <a href="index.html" id="index-button" class="custom-link">HOME</a>
-        <a href="projects.html" id="projects-button" class="custom-link">PROJECTS</a>
-        <a href="contact.html" id="contact-button" class="custom-link">CONTACT</a>
-    </header>
     <div id="projects">
         <div class="project">
-            <div class="project-brand">Brand 1</div>
-            <div class="project-description">A brief description of the project goes here.</div>
+            <div class="project-brand">BIASIA</div>
+            <div class="project-description">GRAHIC DESIGN
+                PROJECTS CONTACT
+                FRANCESCO
+                DA TOS
+                DA TOS
+                GRAPHIC /
+                VISUAL
+                VISUAL
+                DESIGNER 
+               DESIGNER 
+               3D CONTENT CREATION</div>
+            <a href="https://www.biasia.it/it/" class="project-website">SITO</a>   
             <div class="project-images">
-                <img src="img/diavoletto.jpeg" alt="Project 1 Image 1">
-                <img src="img/kekko.jpeg" alt="Project 1 Image 2">
+                <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
+                <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
+                <img src="img/pippo.jpeg" alt="Image" onclick="showLargeImage(this)">
+                <img src="img/giaco.jpeg" alt="Image" onclick="showLargeImage(this)">
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-brand">VEMENCELL</div>
+            <div class="project-description">GRAHIC DESIGN
+                3D CONTENT CREATION</div>
+            <div class="project-images">
+                <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
+                <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-brand">TM8</div>
+            <div class="project-description">GRAHIC DESIGN
+                3D CONTENT CREATION
+               </div>
+            <div class="project-images">
+                <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
+                <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
             </div>
         </div>
     </div>
