--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contatti</title>
     <link rel="stylesheet" href="css/style.css">
-    <!--link rel="stylesheet" href="contact/style.css"-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="js/script.js"></script>
 </head>
 <body>
-    <header>
-        <a href="index.html" id="index-button" class="custom-link">HOME</a>
-        <a href="projects.html" id="projects-button" class="custom-link">PROJECTS</a>
-        <a href="contact.html" id="contact-button" class="custom-link">CONTACT</a>
-    </header>
-    <div id="contact">
-        <div class="nome">
-            FRANCESCO<br>DA TOS
-        </div>
-        <div class="mestiere">
-            GRAPHIC/<br>VISUAL<br>DESIGNER
-        </div>
-        <a href="https://linkedin.com" target="_blank" class="contatti">LinkedIn</a>
-        <a href="https://instagram.com" target="_blank" class="contatti">Instagram</a>
+    <div class="links-container">
+        <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="contatti">LinkedIn</a>
+        <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank" class="contatti">Instagram</a>
         <a href="mailto:your.email@example.com" class="contatti">Email</a>
     </div>
 </body>
