--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="js/script.js"></script>
 </head>
 <body>
-    <header>
-        <a href="index.html" id="index-button" class="custom-link">HOME</a>
-        <a href="projects.html" id="projects-button" class="custom-link">PROJECTS</a>
-        <a href="contact.html" id="contact-button" class="custom-link">CONTACT</a>
-    </header>
+        <div id="background"></div>
+        <div class="nome">
+            FRANCESCO<br>DA TOS
+        </div>
+        <div class="mestiere">
+            GRAPHIC/<br>VISUAL<br>DESIGNER
+        </div>
+        <header>
+            <a href="#" id="index-button" class="custom-link">HOME</a>
+            <a href="#" id="projects-button" class="custom-link">PROJECTS</a>
+            <a href="#" id="contact-button" class="custom-link">CONTACT</a>
+        </header>
+        <div id="content"></div>
     <!--div id="home">
         <h1>Welcome to my portfolio</h1>
         <div id="image-sequence">
