modifica pagina projects

--- a/projects.html
+++ b/projects.html
@@ -7,47 +7,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="projects">
-        <div class="project">
-            <div class="project-brand">BIASIA</div>
-            <div class="project-description">GRAHIC DESIGN
-                PROJECTS CONTACT
-                FRANCESCO
-                DA TOS
-                DA TOS
-                GRAPHIC /
-                VISUAL
-                VISUAL
-                DESIGNER 
-               DESIGNER 
-               3D CONTENT CREATION</div>
-            <a href="https://www.biasia.it/it/" class="project-website">SITO</a>   
-            <div class="project-images">
-                <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
-                <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
-                <img src="img/pippo.jpeg" alt="Image" onclick="showLargeImage(this)">
-                <img src="img/giaco.jpeg" alt="Image" onclick="showLargeImage(this)">
-            </div>
-        </div>
-        <div class="project">
-            <div class="project-brand">VEMENCELL</div>
-            <div class="project-description">GRAHIC DESIGN
-                3D CONTENT CREATION</div>
-            <div class="project-images">
-                <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
-                <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
-            </div>
-        </div>
-        <div class="project">
-            <div class="project-brand">TM8</div>
-            <div class="project-description">GRAHIC DESIGN
-                3D CONTENT CREATION
-               </div>
-            <div class="project-images">
-                <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
-                <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
-            </div>
-        </div>
+    <div class="projects-container">
+        <a class="project-brand" id="biasia" target="_blank">BIASIA</a>
+        <a class="project-brand" target="_blank">VEMENCELL</a>
+        <a class="project-brand">TM8</a>
+    </div>
+
+    <!--div class="project-images">
+        <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
+        <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
+    </div-->
+
+    <div id="biasia-images" class="image-list">
+        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
+        <img src="img/kekko.jpeg" alt="Biasia Image 2">
+        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
+        <img src="img/kekko.jpeg" alt="Biasia Image 2">
+        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
+        <img src="img/kekko.jpeg" alt="Biasia Image 2">
+        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
+        <img src="img/kekko.jpeg" alt="Biasia Image 2">
+        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
+        <img src="img/kekko.jpeg" alt="Biasia Image 2">
+        <!-- Aggiungi altre immagini qui -->
     </div>
 </body>
 </html>
