nuova interfaccia project

--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,8 @@
 <body>
     <div class="projects-container">
         <a class="project-brand" id="biasia" target="_blank">BIASIA</a>
-        <a class="project-brand" target="_blank">VEMENCELL</a>
-        <a class="project-brand">TM8</a>
+        <a class="project-brand" id="vemecell" target="_blank">VEMENCELL</a>
+        <a class="project-brand" id="tm8">TM8</a>
     </div>
 
     <!--div class="project-images">
@@ -19,17 +19,37 @@
     </div-->
 
     <div id="biasia-images" class="image-list">
-        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
-        <img src="img/kekko.jpeg" alt="Biasia Image 2">
-        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
-        <img src="img/kekko.jpeg" alt="Biasia Image 2">
-        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
-        <img src="img/kekko.jpeg" alt="Biasia Image 2">
-        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
-        <img src="img/kekko.jpeg" alt="Biasia Image 2">
-        <img src="img/diavoletto.jpeg" alt="Biasia Image 1">
-        <img src="img/kekko.jpeg" alt="Biasia Image 2">
-        <!-- Aggiungi altre immagini qui -->
+        <img src="img/kekko.jpeg"  onclick="showLargeImage(this)" >
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+    </div>
+    <div id="vemecell-images" class="image-list">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
+        <img src="img/topo.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/topo.jpeg" onclick="showLargeImage(this)">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+    </div>
+    <div id="tm8-images" class="image-list">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
     </div>
 </body>
 </html>
