new 3d model + interaction

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-        <div id="background"></div>
-        <div class="nome">
-            FRANCESCO<br>DA TOS
-        </div>
-        <div class="mestiere">
-            GRAPHIC/<br>VISUAL<br>DESIGNER
-        </div>
-        <header>
-            <a href="#" id="index-button" class="custom-link">HOME</a>
-            <a href="#" id="projects-button" class="custom-link">PROJECTS</a>
-            <a href="#" id="contact-button" class="custom-link">CONTACT</a>
-        </header>
-        <div id="content"></div>
+    <div id="flash-text" class="flash-text">click to move  <('o'<) </div>
+    <div id="background"></div>
+    <div class="nome">
+        FRANCESCO<br>DA TOS
+    </div>
+    <div class="mestiere">
+        GRAPHIC/<br>VISUAL<br>DESIGNER
+    </div>
+    <header>
+        <a href="#" id="index-button" class="custom-link">HOME</a>
+        <a href="#" id="projects-button" class="custom-link">PROJECTS</a>
+        <a href="#" id="contact-button" class="custom-link">CONTACT</a>
+    </header>
+    <div id="content"></div>
 </body>
 </html>
