--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
         <a class="project-brand" id="biasia" target="_blank">BIASIA</a>
         <a class="project-brand" id="vemecell" target="_blank">VEMENCELL</a>
         <a class="project-brand" id="tm8">TM8</a>
+        <a class="project-brand" id="maxMara">MAX MARA</a>
     </div>
 
     <!--div class="project-images">
@@ -24,32 +25,35 @@
         <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
         <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
         <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
         <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
         <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
     </div>
     <div id="vemecell-images" class="image-list">
         <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
-        <img src="img/topo.jpeg" onclick="showLargeImage(this)"">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)"">
         <img src="img/topo.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
+        <img src="img/topo.jpeg" onclick="showLargeImage(this)">
+        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
         <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)"">
+        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
         <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
     </div>
     <div id="tm8-images" class="image-list">
         <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)"">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)"">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)"">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)"">
         <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
+        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
+        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
+        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
+    </div>
+    <div id="maxMara-images" class="image-list">
+        <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
 </body>
 </html>
