--- a/projects.html
+++ b/projects.html
@@ -9,51 +9,68 @@
 <body>
     <div class="projects-container">
         <a class="project-brand" id="biasia" target="_blank">BIASIA</a>
-        <a class="project-brand" id="vemecell" target="_blank">VEMENCELL</a>
-        <a class="project-brand" id="tm8">TM8</a>
+        <a class="project-brand" id="coeval" target="_blank">COEVAL</a>
+        <a class="project-brand" id="espiazione" target="_blank">ESPIAZIONE</a>
+        <a class="project-brand" id="junk" target="_blank">JUNK</a>
         <a class="project-brand" id="maxMara">MAX MARA</a>
+        <a class="project-brand" id="spaziox">SPAZIO X</a>
+        <a class="project-brand" id="tm8">TM8</a>
+        <a class="project-brand" id="vemecell" target="_blank">VEMENCELL</a>
+        <a class="project-brand" id="webEyewear" target="_blank">WEB EYEWEAR</a>
+        <a class="project-brand" id="personal" target="_blank">PERSONAL</a>
     </div>
-
-    <!--div class="project-images">
-        <img src="img/diavoletto.jpeg" alt="Image" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" alt="Image" onclick="showLargeImage(this)">
-    </div-->
 
     <div id="biasia-images" class="image-list">
-        <img src="img/kekko.jpeg"  onclick="showLargeImage(this)" >
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+        <img src="img/BIASIA/1.png"  onclick="showLargeImage(this)" >
+        <img src="img/BIASIA/2.jpg" onclick="showLargeImage(this)">
+        <img src="img/BIASIA/3.png" onclick="showLargeImage(this)">
+        <img src="img/BIASIA/4.png" onclick="showLargeImage(this)">
+        <img src="img/BIASIA/5.png" onclick="showLargeImage(this)">
+        <img src="img/BIASIA/6.png" onclick="showLargeImage(this)">
     </div>
-    <div id="vemecell-images" class="image-list">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
-        <img src="img/topo.jpeg" onclick="showLargeImage(this)">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
-        <img src="img/topo.jpeg" onclick="showLargeImage(this)">
-        <img src="img/diavoletto.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/gagi.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
+    <div id="coeval-images" class="image-list">
+        <img src="img/COEVAL/1.jpg"  onclick="showLargeImage(this)" >
+        <img src="img/COEVAL/2.jpg" onclick="showLargeImage(this)">
     </div>
-    <div id="tm8-images" class="image-list">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/giaco.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
-        <img src="img/kekko.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
-        <img src="img/pippo.jpeg" onclick="showLargeImage(this)">
+    <div id="espiazione-images" class="image-list">
+        <img src="img/ESPIAZIONE/1.jpg"  onclick="showLargeImage(this)" >
+        <img src="img/ESPIAZIONE/2.jpg" onclick="showLargeImage(this)">
+        <img src="img/ESPIAZIONE/3.png" onclick="showLargeImage(this)">
+        <img src="img/ESPIAZIONE/4.png" onclick="showLargeImage(this)">
+    </div>
+    <div id="junk-images" class="image-list">
+        <img src="img/JUNK/1.jpg"  onclick="showLargeImage(this)" >
+        <img src="img/JUNK/2.jpg" onclick="showLargeImage(this)">
+        <img src="img/JUNK/3.jpg" onclick="showLargeImage(this)">
     </div>
     <div id="maxMara-images" class="image-list">
         <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div id="spaziox-images" class="image-list">
+        <img src="img/SPAZIOX/1.jpg"  onclick="showLargeImage(this)" >
+        <img src="img/SPAZIOX/2.png" onclick="showLargeImage(this)">
+        <img src="img/SPAZIOX/3.png" onclick="showLargeImage(this)">
+        <img src="img/SPAZIOX/4.png" onclick="showLargeImage(this)">
+    </div>
+    <div id="tm8-images" class="image-list">
+        <img src="img/TM8/1.png"  onclick="showLargeImage(this)" >
+        <img src="img/TM8/2.png" onclick="showLargeImage(this)">
+        <img src="img/TM8/3.png" onclick="showLargeImage(this)">
+        <img src="img/TM8/4.png" onclick="showLargeImage(this)">
+    </div>
+    <div id="vemecell-images" class="image-list">
+        <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div id="webEyewear-images" class="image-list">
+        <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div id="personal-images" class="image-list">
+        <img src="img/PERSONAL/1.jpg"  onclick="showLargeImage(this)" >
+        <img src="img/PERSONAL/2.jpg" onclick="showLargeImage(this)">
+        <img src="img/PERSONAL/3.jpg" onclick="showLargeImage(this)">
+        <img src="img/PERSONAL/4.jpg" onclick="showLargeImage(this)">
+        <img src="img/PERSONAL/5.jpg" onclick="showLargeImage(this)">
+        <img src="img/PERSONAL/6.jpg" onclick="showLargeImage(this)">
     </div>
 </body>
 </html>
