--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatti</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--style>
+        .links-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: calc(100vh - 100px); /* Riduci l'altezza per evitare l'overlay */
+            margin-top: 50px; /* Aggiungi margine superiore per evitare l'overlay */
+        }
+    </style-->
 </head>
 <body>
-    <div class="links-container">
-        <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="contatti">LinkedIn</a>
-        <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank" class="contatti">Instagram</a>
-        <a href="mailto:your.email@example.com" class="contatti">Email</a>
+    <div class="container-flex links-container">
+        <div class="row text-center">
+            <div class="col-12">
+                <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="contatti">LINKEDIN</a>
+            </div>
+            <div class="col-12">
+                <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank" class="contatti">INSTAGRAM</a>
+            </div>
+            <div class="col-12">
+                <a href="mailto:your.email@example.com" target="_blank" class="contatti">EMAIL</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
