--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,6 @@
     <title>Contatti</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!--style>
-        .links-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: calc(100vh - 100px); /* Riduci l'altezza per evitare l'overlay */
-            margin-top: 50px; /* Aggiungi margine superiore per evitare l'overlay */
-        }
-    </style-->
 </head>
 <body>
     <div class="container-flex links-container">
@@ -27,6 +18,9 @@
             </div>
             <div class="col-12">
                 <a href="mailto:your.email@example.com" target="_blank" class="contatti">EMAIL</a>
+            </div>
+            <div class="col-12">
+                <a href="pdf/portfolio.pdf" download="portfolio.pdf" class="contatti">PORTFOLIO</a>
             </div>
         </div>
     </div>
