--- a/index.html
+++ b/index.html
@@ -11,48 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     <style>
-        @media (max-width: 768px) {
-            .home-button {
-                position: absolute;
-                bottom: 10px;
-                right: 10px;
-            }
-            .menu-bottom {
-                position: absolute;
-                bottom: 50px;
-                width: 100%;
-                text-align: center;
-            }
-            .header-francesco {
-                text-align: left;
-            }
-        }
-        .overlay-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
-        .overlay-container .row {
-            pointer-events: auto;
-        }
-        .canvas-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: white;
-            opacity: 0.5;
-            pointer-events: none;
-        }
-        .icon-container {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-        }
+
     </style>
 </head>
 <body>
@@ -60,25 +19,33 @@
     <div id="background"></div>
     <div class="overlay-container">
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-5" style="margin-top: 20px;">
-                <div class="col header-francesco">FRANCESCO<br>DA TOS</div>
-                <div class="col header-francesco">GRAPHIC/<br>VISUAL<br>DESIGNER</div>
+            <div class="row row-cols-1 row-cols-md-6" style="margin-top: 20px;">
+                <div class="col d-none d-md-block">
+                    <img src="img/fotoProfilo.jpg"  class="fotoProfilo-lg">
+                </div>
+                <div class="col d-none d-md-block header-francesco">FRANCESCO<br>DA TOS</div>
+                <div class="col d-none d-md-block header-francesco">GRAPHIC/<br>VISUAL<br>DESIGNER</div>
                 <div class="col d-none d-md-block menu-top" id="index-button">HOME</div>
                 <div class="col d-none d-md-block menu-top" id="projects-button">PROJECTS</div>
                 <div class="col d-none d-md-block menu-top" id="contact-button">CONTACTS</div>
+            </div>
+            <div class="row row-cols-4 d-md-none" style="margin-top: 30px;">
+                <div class="col d-flex justify-content-center align-items-center">
+                    <img src="img/fotoProfilo.jpg" class="fotoProfilo-sm">
+                </div>
+                <div class="col d-flex justify-content-center align-items-center francesco-datos-sm">
+                    FRANCESCO
+                    <br>DA TOS
+                </div>
+                <div class="col"></div>
+                <div class="col d-flex justify-content-center align-items-center graphic-designer-sm">
+                    GRAPHIC/<br>VISUAL<br>DESIGNER
+                </div>
             </div>
             <div class="row row-cols-3 d-md-none menu-bottom">
                 <div class="col" id="index-button">HOME</div>
                 <div class="col" id="projects-button">PROJECTS</div>
                 <div class="col" id="contact-button">CONTACTS</div>
-            </div>
-            <div class="row text-center">
-                <div class="col icon-container">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-file-earmark-arrow-down" viewBox="0 0 16 16">
-                        <path d="M8 5a.5.5 0 0 1 .5.5v5.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 11.293V5.5A.5.5 0 0 1 8 5z"/>
-                        <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3-.5a1 1 0 0 1-1-1V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V5h-2a1 1 0 0 1-1-1z"/>
-                    </svg>
-                </div>
             </div>
         </div>
     </div>
