banner + reset project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="col d-flex justify-content-center align-items-center">
                     <img src="img/fotoProfilo.jpg" class="fotoProfilo-sm">
                 </div>
-                <div class="col d-flex justify-content-center align-items-center francesco-datos-sm">
+                <div class="col d-flex francesco-datos-sm">
                     FRANCESCO
                     <br>DA TOS
                 </div>
@@ -50,5 +50,27 @@
         </div>
     </div>
     <div id="content"></div>
-</body>
+    <div id='container'>
+        <div class='scroll'>
+            <div>Mi chiamo Francesco Da Tos, ho 24 anni e attualmente risiedo 
+                a Treviso. 
+                Dal punto di vista professionale, svolgo l’attività di graphic e 
+                visual designer Freelancer, con una forte inclinazione verso 
+                l’innovazione nel settore e un profondo interesse per il design 
+                e l’arte in generale.
+                 La mia attività si concentra principalmente sulla 
+                comunicazione, con particolare riguardo ai settori della moda, 
+                degli eventi e della musica, con un’orientamento verso le 
+                piattaforme digitali.
+                 Nel corso della mia carriera, ho avuto l’opportunità di 
+                collaborare con rinomate aziende del settore della moda e 
+                della produzione, tra cui Vogue, Max Mara, Marcolin 
+                e Thélios, grazie alla mia attuale posizione presso l’agenzia 
+                creativa Brvto, con cui lavoro da circa un anno e mezzo.
+                 Inoltre, ho avuto l’opportunità di collaborare in modo più 
+                personale e diretto con realtà come Coeval Magazine e 
+                importanti etichette discografiche come Universal e Warner, 
+                oltre a numerosi progetti indipendenti.                      :) </div>
+        </div>
+    </div></body>
 </html>
