--- a/projects.html
+++ b/projects.html
@@ -3,118 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Portfolio Preview</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container-flex links-container">
-        <div class="row text-center">
-            <div class="col-12">
-                <a target="_blank" class="contatti">WIP</a>
-            </div>
-            <div class="col-12">
-                <a target="_blank" class="contatti">WIP</a>
-            </div>
-            <div class="col-12">
-                <a target="_blank" class="contatti">WIP</a>
-            </div>
-            <div class="col-12">
-                <a target="_blank" class="contatti">WIP</a>
-            </div>
-        </div>
-    </div>
-    <!--div class="container">
-        <div class="row">
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="biasia" target="_blank">BIASIA</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="coeval" target="_blank">COEVAL</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="espiazione" target="_blank">ESPIAZIONE</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="junk" target="_blank">JUNK</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="maxMara">MAX MARA</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="spaziox">SPAZIO X</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="tm8">TM8</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="vemecell" target="_blank">VEMENCELL</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="webEyewear" target="_blank">WEB EYEWEAR</a>
-            </div>
-            <div class="col">
-                <a class="btn btn-primary btn-block" id="personal" target="_blank">PERSONAL</a>
-            </div>
-        </div>
-    </div>
-
-    <div class="container mt-4">
-        <div id="biasia-images" class="row">
-            <img src="img/BIASIA/1.png"  onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/BIASIA/2.jpg" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/BIASIA/3.png" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/BIASIA/4.png" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/BIASIA/5.png" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/BIASIA/6.png" onclick="showLargeImage(this)" class="col-md-4">
-        </div>
-        <div id="coeval-images" class="row">
-            <img src="img/COEVAL/1.jpg"  onclick="showLargeImage(this)" class="col-md-6">
-            <img src="img/COEVAL/2.jpg" onclick="showLargeImage(this)" class="col-md-6">
-        </div>
-        <div id="espiazione-images" class="row">
-            <img src="img/ESPIAZIONE/1.jpg"  onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/ESPIAZIONE/2.jpg" onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/ESPIAZIONE/3.png" onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/ESPIAZIONE/4.png" onclick="showLargeImage(this)" class="col-md-3">
-        </div>
-        <div id="junk-images" class="row">
-            <img src="img/JUNK/1.jpg"  onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/JUNK/2.jpg" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/JUNK/3.jpg" onclick="showLargeImage(this)" class="col-md-4">
-        </div>
-        <div id="maxMara-images" class="row">
-            <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen class="col-md-12"></iframe>
-        </div>
-        <div id="spaziox-images" class="row">
-            <img src="img/SPAZIOX/1.jpg"  onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/SPAZIOX/2.png" onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/SPAZIOX/3.png" onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/SPAZIOX/4.png" onclick="showLargeImage(this)" class="col-md-3">
-        </div>
-        <div id="tm8-images" class="row">
-            <img src="img/TM8/1.png"  onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/TM8/2.png" onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/TM8/3.png" onclick="showLargeImage(this)" class="col-md-3">
-            <img src="img/TM8/4.png" onclick="showLargeImage(this)" class="col-md-3">
-        </div>
-        <div id="vemecell-images" class="row">
-            <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen class="col-md-12"></iframe>
-        </div>
-        <div id="webEyewear-images" class="row">
-            <iframe src="https://player.vimeo.com/video/938717653" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen class="col-md-12"></iframe>
-        </div>
-        <div id="personal-images" class="row">
-            <img src="img/PERSONAL/1.jpg"  onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/PERSONAL/2.jpg" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/PERSONAL/3.jpg" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/PERSONAL/4.jpg" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/PERSONAL/5.jpg" onclick="showLargeImage(this)" class="col-md-4">
-            <img src="img/PERSONAL/6.jpg" onclick="showLargeImage(this)" class="col-md-4">
-        </div>
-    </div-->
+    <div id="albums-container" class="container-flex links-container"></div>
+    <script>
+       
+    </script>
 </body>
 </html>
