--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container-flex links-container">
+    <div class="container links-container">
         <div class="row text-center">
             <div class="col-12">
                 <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="contatti">LINKEDIN</a>
