--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
-    <style>
-
-    </style>
+    <script src="js/script.js" type="module" defer></script>
 </head>
 <body>
     <div id="flash-text" class="flash-text">click to move  <('o'<)</div>
@@ -72,5 +69,6 @@
                 importanti etichette discografiche come Universal e Warner, 
                 oltre a numerosi progetti indipendenti.                      :) </div>
         </div>
-    </div></body>
+    </div>
+</body>
 </html>
