--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div id="albums-container" class="container-flex links-container"></div>
-    <script>
-       
-    </script>
+    <!--div id="brands-list"></div-->
+    <div class="container-fluid container-brand px-4">
+        <div class="row">
+            <div class="col-2">
+                <h1 class="brand-title"></h1>
+            </div>
+            <div class="col-1" >
+            </div>
+            <div class="col-9">
+                <div class="row brand-description" >
+                </div>
+                <div class="row" style="height: 60px;">
+                </div>
+                <div class="row brand-photos" >  
+                </div>
+            <!--div class="row ">
+                <div class="col-1 f-sinistra text-center" style="background-color:gold">
+                    <h1><</h1>
+                </div>
+                <div class="col-1 f-destra text-center" style="background-color:green">
+                    <h1>></h1>
+                </div-->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
