fix project + prova

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="overlay-container">
         <div class="container">
             <div class="row row-cols-1 row-cols-md-6" style="margin-top: 20px;">
-                <div class="col d-none d-md-block">
+                <div class="col d-none d-md-block" >
                     <img src="img/fotoProfilo.jpg"  class="fotoProfilo-lg">
                 </div>
                 <div class="col d-none d-md-block header-francesco">FRANCESCO<br>DA TOS</div>
@@ -26,8 +26,9 @@
                 <div class="col d-none d-md-block menu-top" id="projects-button">PROJECTS</div>
                 <div class="col d-none d-md-block menu-top" id="contact-button">CONTACTS</div>
             </div>
-            <div class="row row-cols-4 d-md-none" style="margin-top: 30px;">
-                <div class="col d-flex justify-content-center align-items-center">
+            <div class="row row-cols-4 d-md-none" style="margin-top: 20px; justify-content: center;
+        align-items: center;">
+                <div class="col container-photo-profilo">
                     <img src="img/fotoProfilo.jpg" class="fotoProfilo-sm">
                 </div>
                 <div class="col d-flex francesco-datos-sm">
@@ -35,7 +36,7 @@
                     <br>DA TOS
                 </div>
                 <div class="col"></div>
-                <div class="col d-flex justify-content-center align-items-center graphic-designer-sm">
+                <div class="col graphic-designer-sm">
                     GRAPHIC/<br>VISUAL<br>DESIGNER
                 </div>
             </div>
