fix impaginazione projects

--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container-fluid container-brand px-4">
         <div class="row">
-            <div class="col-5 col-md-2 brand-title"> 
-            </div>
             <div class="col-7 row d-md-none brand-description-sm">
+            </div>
+            <div class="col-5 col-md-2 brand-title"> 
             </div>
             <div class="col-1 d-none d-md-block">
             </div>
@@ -27,11 +27,19 @@
         <div class="row d-md-none" style="height: 20px;">
         </div>
         <div class="row d-md-none container-photos-sm">
-            <div class="col-1 f-sinistra text-center"><</div>
+            <div class="col-1 f-sinistra text-center"> 
+                &lt;<br>
+                &lt;<br>
+                &lt;
+            </div>
             <div class="col-10">
                 <img src="" class="brand-photos-sm" style="width: 100%;">
             </div>
-            <div class="col-1 f-destra text-center">></div>
+            <div class="col-1 f-destra text-center">                
+                &gt;<br>
+                &gt;<br>
+                &gt;
+            </div>
         </div>
     </div>
 </body>
