fix client telefono

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <div id="filtro-progetti"></div>
     <div class="overlay-container">
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-6" style="margin-top: 20px;">
-                <div class="col d-none d-md-block" >
+            <div class="row row-cols-8" style="margin-top: 20px;">
+                <div class="col d-none d-md-block">
                     <img src="img/fotoProfilo.jpg"  class="fotoProfilo-lg">
                 </div>
                 <div class="col d-none d-md-block header-francesco">FRANCESCO<br>DA TOS</div>
                 <div class="col d-none d-md-block header-francesco">GRAPHIC/<br>VISUAL<br>DESIGNER</div>
+                <div class="col d-none d-md-block"> </div>
                 <div class="col d-none d-md-block menu-top" id="index-button">HOME</div>
-                <div class="col d-none d-md-block menu-top" id="projects-button">PROJECTS</div>
+                <div class="col d-none d-md-block menu-top" id="projects-buttonWIP">PROJECTS</div>
                 <div class="col d-none d-md-block menu-top" id="contact-button">CONTACTS</div>
             </div>
             <div class="row row-cols-4 d-md-none" style="margin-top: 20px; justify-content: center; align-items: center;">
@@ -42,43 +43,16 @@
             </div>
 
             <home-container id="home"></home-container>
-            <contacts-container id="contacts"></contacts-container>
-
-            <div class="row row-cols-6 d-md-none menu-bottom" >
-                <div class="col-4"></div>
-                <div class="col-4">
-                    <projects-container class="row container-brand" id="projects"></projects-container>        
-                </div>
-                <div class="col-4"></div>
+            <contacts-container  class="row links-container" id="contacts"></contacts-container>
+            <projects-container class="row container-brand" id="projects"></projects-container>
+            
+            
+            <div class="row row-cols-3 d-md-none menu-bottom" >
                 <div class="col-4" id="index-button">HOME</div>
                 <div class="col-4" id="projects-button">PROJECTS</div>
                 <div class="col-4" id="contact-button">CONTACTS</div>
             </div>
         </div>
     </div>
-
-    <!--div id='container'>
-        <div class='scroll'>
-            <div>Mi chiamo Francesco Da Tos, ho 24 anni e attualmente risiedo 
-                a Treviso. 
-                Dal punto di vista professionale, svolgo l’attività di graphic e 
-                visual designer Freelancer, con una forte inclinazione verso 
-                l’innovazione nel settore e un profondo interesse per il design 
-                e l’arte in generale.
-                 La mia attività si concentra principalmente sulla 
-                comunicazione, con particolare riguardo ai settori della moda, 
-                degli eventi e della musica, con un’orientamento verso le 
-                piattaforme digitali.
-                 Nel corso della mia carriera, ho avuto l’opportunità di 
-                collaborare con rinomate aziende del settore della moda e 
-                della produzione, tra cui Vogue, Max Mara, Marcolin 
-                e Thélios, grazie alla mia attuale posizione presso l’agenzia 
-                creativa Brvto, con cui lavoro da circa un anno e mezzo.
-                 Inoltre, ho avuto l’opportunità di collaborare in modo più 
-                personale e diretto con realtà come Coeval Magazine e 
-                importanti etichette discografiche come Universal e Warner, 
-                oltre a numerosi progetti indipendenti.                      :) </div>
-        </div>
-    </div-->
 </body>
 </html>
