--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="filtro-progetti"></div>
     <div class="overlay-container">
         <div class="container">
-            <div class="row row-cols-8" style="margin-top: 20px;">
+            <div class="row row-cols-8 header-cecco" style="margin-top: 20px;">
                 <div class="col d-none d-md-block">
                     <img src="img/fotoProfilo.jpg"  class="fotoProfilo-lg">
                 </div>
@@ -28,7 +28,7 @@
                 <div class="col d-none d-md-block menu-top" id="projects-buttonWIP">PROJECTS</div>
                 <div class="col d-none d-md-block menu-top" id="contact-button">CONTACTS</div>
             </div>
-            <div class="row row-cols-4 d-md-none" style="margin-top: 20px; justify-content: center; align-items: center;">
+            <div class="row row-cols-4 d-md-none header-cecco-sm" style="margin-top: 20px;">
                 <div class="col container-photo-profilo">
                     <img src="img/fotoProfilo.jpg" class="fotoProfilo-sm">
                 </div>
