--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
                 <div class="col d-none d-md-block header-francesco">FRANCESCO<br>DA TOS</div>
                 <div class="col d-none d-md-block header-francesco">GRAPHIC/<br>VISUAL<br>DESIGNER</div>
                 <div class="col d-none d-md-block"> </div>
+                <div class="col d-none d-md-block"> </div>
                 <div class="col d-none d-md-block menu-top" id="index-button">HOME</div>
-                <div class="col d-none d-md-block menu-top" id="projects-buttonWIP">PROJECTS</div>
+                <div class="col d-none d-md-block menu-top" id="projects-button-top">PROJECTS</div>
                 <div class="col d-none d-md-block menu-top" id="contact-button">CONTACTS</div>
             </div>
             <div class="row row-cols-4 d-md-none header-cecco-sm" style="margin-top: 20px;">
