--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col d-none d-md-block"> </div>
                 <div class="col d-none d-md-block"> </div>
                 <div class="col d-none d-md-block menu-top" id="index-button">HOME</div>
-                <div class="col d-none d-md-block menu-top" id="projects-button-top">PROJECTS</div>
+                <div class="col d-none d-md-block menu-top" id="projects-button-pc">PROJECTS</div>
                 <div class="col d-none d-md-block menu-top" id="contact-button">CONTACTS</div>
             </div>
             <div class="row row-cols-4 d-md-none header-cecco-sm" style="margin-top: 20px;">
