--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>cecco-meraviglia</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -45,7 +45,7 @@
 
             <home-container id="home"></home-container>
             <contacts-container  class="row links-container" id="contacts"></contacts-container>
-            <projects-container class="row container-brand" id="projects"></projects-container>
+            <projects-container-pc class="row container-brand" id="projects"></projects-container-pc>
             
             
             <div class="row row-cols-3 d-md-none menu-bottom" >
