feature titoli telefono

--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 
             <home-container id="home"></home-container>
             <contacts-container  class="row links-container" id="contacts"></contacts-container>
-            <projects-container-pc class="row container-brand" id="projects"></projects-container-pc>
+            <projects-container-pc class="row d-none d-md-block container-brand" id="projects"></projects-container-pc>
+            <projects-container-phone class="row projects-phone" id="projects-phone"></projects-container-phone>
             
             
             <div class="row row-cols-3 d-md-none menu-bottom" >
                 <div class="col-4" id="index-button">HOME</div>
-                <div class="col-4" id="projects-button">PROJECTS</div>
+                <div class="col-4" id="projects-button-phone">PROJECTS</div>
                 <div class="col-4" id="contact-button">CONTACTS</div>
             </div>
         </div>
